test/errors/parsing/dotExprInUseImport.1.good
dotExprInUseImport.chpl:6: error: cannot use dot expression 'M.a' in 'except' list
